<resources>
    <string name="app_name">The Weather Guy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Message Developing Team</string>
    <string name="under_construction">This functionality is currently under development</string>
    <string name="profile">Profile</string>
    <string name="today_weather">Today\'s Weather</string>
    <string name="week_s_forecast">Week\'s Forecast</string>
    <string name="weather_map">Weather Map</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share</string>
    <string name="send">Message Developing Team</string>
    <string name="nav_header_subtitle1">Weather Information, at the palm of your hands</string>
    <string name="nav_header_subtitle2">An app by Federico Brun</string>
    <string name="today_weather_text_description">Today\'s Weather for:</string>
    <string name="today_temperature_textview">28º</string>
    <string name="list_item_day_text">Monday</string>
    <string name="list_item_text_two">Partly Cloudy</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_splash">Splash</string>
    <string name="login">Login</string>
    <string name="developer_mail">fedejbrun@gmail.com</string>
    <string name="mail_subject">The Weather Guy User Feedback</string>
    <string name="mail_body">Hi! I\'m loving your App!</string>
    <string name="choose_email_client">Choose an email client</string>
    <string name="there_is_no_email_client">There is no email client installed.</string>
    <string name="your_profile">Your profile</string>
    <string name="usage_preferences">Usage preferences</string>
    <string name="profile_name">Federico</string>
    <string name="profile_surname">Brun</string>
    <string name="profile_mail">fedejbrun@gmail.com</string>
    <string name="units_preferences">Units</string>
    <string name="show_animations">Show animations</string>
    <string name="show_animations_on">Shows weather condition animations. Default behaviour, enhanced User Experience.</string>
    <string name="show_animations_off">Shows weather condition images.</string>
    <string name="list_item_max">Max:</string>
    <string name="list_item_max_value">30</string>
    <string name="units">ºC</string>
    <string name="list_item_min">Min:</string>
    <string name="list_item_min_value">24</string>
    <string name="weather_description">Sunny</string>
    <string name="change">Change</string>
    <string name="profile_username">fedeturi</string>
    <string name="refresh_preferences">Refreshing period</string>
    <string name="profile_change_dialog_title">Your new Username</string>
    <string name="tody_weather_tv_city">Córdoba, Argentina</string>
    <string name="today_weather_text_description_condition">It is...</string>
    <string name="couldnt_load_current">Couldn\'t load current weather information</string>
</resources>
