<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/list_item"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="2dp"
            android:id="@+id/list_item_animation"
            android:contentDescription="@string/weather_description"
            android:outlineSpotShadowColor="@color/primaryTextColor"
            android:src="@drawable/ic_today_black_24dp" />

        <TextView
            android:id="@+id/list_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/list_item_animation"
            android:text="@string/list_item_day_text"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_item_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_item_title"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/list_item_animation"
            android:text="@string/list_item_text_two"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/list_item_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/list_item_subtitle"
                android:text="@string/list_item_max"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_item_max_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@+id/list_item_max"
                android:text="@string/list_item_max_value"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_item_max_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@+id/list_item_max_value"
                android:text="@string/units"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_item_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/list_item_max_units"
                android:text="@string/list_item_min"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_item_min_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@+id/list_item_min"
                android:text="@string/list_item_min_value"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_item_min_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@+id/list_item_min_value"
                android:text="@string/units"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp" />

        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>